# pharma-access-causal-intelligence

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  PharmaAccess.Tests.sln  PharmaAccess.sln  README.md  SECURITY.md  START_HERE.md
config/: research-reference-source-plan.json  research-sources.example.json
database/: README.md
docs/: CODEX_MASTER_PROMPT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  PROJECT_BLUEPRINT.md
python/: README.md  pyproject.toml
python/scripts/: validate_real_causal.py
python/src/pharma_access_validation/: __init__.py  cli.py  contracts.py  dowhy_validation.py  econml_validation.py  estimators.py  fda_first_generic_html.py  graph_validation.py  hashing.py  loaders.py  parity.py  refutations.py  reporting.py
python/tests/: conftest.py  test_cli.py  test_contracts.py  test_dowhy_validation.py  test_econml_validation.py  test_estimators.py  test_fda_first_generic_html.py  test_hashing.py  test_parity.py  test_refutations.py
research/: README.md
scripts/: Approve-ResearchProtocol.ps1  Complete-RealResearchDatabase.ps1  Finalize-ResearchDataset.ps1  Invoke-AndaLaunchFreezeCandidate.ps1  Invoke-FdaFirstGenericHtmlAcquisition.ps1  Invoke-FdaFirstGenericStructuredImport.ps1  Invoke-FdaOnlyLinkageFeasibility.ps1  Invoke-FdaReferenceImport.ps1  Invoke-ProductIdentitySourceAcquisition.ps1  Invoke-ResearchDataImport.ps1  Invoke-ResearchDatabaseMigration.ps1  New-ResearchProtocol.ps1  Resume-ResearchDataImport.ps1  Run-PharmaAccessWeb.ps1  Show-ResearchProtocol.ps1  (+6 more)
(+368 files in other folders)
