[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pharma-access-validation"
version = "0.1.0"
description = "Independent synthetic causal validation for PharmaAccess"
requires-python = ">=3.12,<3.13"
dependencies = [
  "dowhy==0.14",
  "econml==0.16.0",
  "networkx==3.5",
  "numpy==2.2.6",
  "pandas==2.3.3",
  "pydantic==2.12.5",
  "scikit-learn==1.6.1",
  "scipy==1.15.3",
  "statsmodels==0.14.6",
]

[project.optional-dependencies]
test = ["pytest==9.0.2"]

[project.scripts]
pharma-access-validate = "pharma_access_validation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
